build_errors_2.txt
cargo :     Checking ai-lib v0.4.0 (D:\rustapp\ai-lib)
所在位置 行:1 字符: 1
+ cargo check 2>&1 | Out-File -Encoding utf8 build_errors_2.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking ai...rustapp\ai-lib):String   
 ) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `OpenAiAdapter`
  --> src\client\provider_factory.rs:11:37
   |
11 |     GenericAdapter, MistralAdapter, OpenAiAdapter, PerplexityAdapter,
   |                                     ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Arc`
 --> src\registry\mod.rs:6:17
  |
6 | use std::sync::{Arc, RwLock};
  |                 ^^^

error[E0599]: no variant or associated item named `InvalidConfiguration` found for enum 
`types::error::AiLibError` in the current scope
   --> src\client\builder.rs:260:44
    |
260 |                     return Err(AiLibError::InvalidConfiguration(format!(
    |                                            ^^^^^^^^^^^^^^^^^^^^ variant or 
associated item not found in `AiLibError`
    |
   ::: src\types\error.rs:24:1
    |
24  | pub enum AiLibError {
    | ------------------- variant or associated item `InvalidConfiguration` not found 
for this enum

error[E0599]: no variant or associated item named `InvalidConfiguration` found for enum 
`types::error::AiLibError` in the current scope
   --> src\client\builder.rs:266:40
    |
266 |                 return Err(AiLibError::InvalidConfiguration(format!(
    |                                        ^^^^^^^^^^^^^^^^^^^^ variant or associated 
item not found in `AiLibError`
    |
   ::: src\types\error.rs:24:1
    |
24  | pub enum AiLibError {
    | ------------------- variant or associated item `InvalidConfiguration` not found 
for this enum

error[E0599]: no variant or associated item named `InvalidConfiguration` found for enum 
`types::error::AiLibError` in the current scope
   --> src\client\builder.rs:432:44
    |
432 |                     return Err(AiLibError::InvalidConfiguration(format!(
    |                                            ^^^^^^^^^^^^^^^^^^^^ variant or 
associated item not found in `AiLibError`
    |
   ::: src\types\error.rs:24:1
    |
24  | pub enum AiLibError {
    | ------------------- variant or associated item `InvalidConfiguration` not found 
for this enum

For more information about this error, try `rustc --explain E0599`.
warning: `ai-lib` (lib) generated 2 warnings
error: could not compile `ai-lib` (lib) due to 3 previous errors; 2 warnings emitted
